force-app/main/default/objects/Maintenance_Request__c/Maintenance_Request__c.object-meta.xml
<CustomObject>
    <label>Maintenance Request</label>
    <nameField>
        <displayFormat>MRN-{000000}</displayFormat>
        <label>Maintenance Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>