force-app/main/default/objects/Maintenance_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>